maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:38: error: type mismatch;
 found   : Unit
 required: Boolean
        if(c=getIndication(x, y)){
            ^